OO-4411: add an opt-out possibility to notifications
Use an opt-out flow for comments in video, springify notifications and
notifications handlers